--- a/html advanced/css/style.css
+++ b/html advanced/css/style.css
@@ -1,8 +1,13 @@
-body
+html
 {
-    background-color: aqua;
-    height: 100vh;
+    height: fit-content;
+    margin: 10px;
+    border: 6px solid black;
+    padding: 5px;
+    
+
 }
+
 header
 {
 padding: 5px;
@@ -78,7 +83,13 @@ margin: 4px;
 main
 {
     height: inherit;
-    margin-top: 10px;
+    margin: 10px;
+    justify-content:center;
+    border: 4px solid black;
+    padding: 20px;
+    align-items: center;
+
+
 }
 main section
 {
@@ -86,18 +97,21 @@ main section
     padding: 10px;
     display:flex;
     justify-content: center;
+    align-items: center;
     margin: 4px;
+    
+   
+
 }
-
-
 
 #hero-section div
 {
     justify-content: space-between;
     width: 17%;
-border: 1px solid black;
-text-align: center;
- margin: 4px;
+    border: 1px solid black;
+    text-align: center;
+    margin: 4px;
+    
 
 }
 #hero-section div h1
@@ -118,7 +132,7 @@ margin: 4px;
 }
 #hero-section div button
 {
-    border: 1px solid orange;
+border: 1px solid orange;
 width: 96%;
 padding: 20px;
 height: 30%;
@@ -132,14 +146,17 @@ justify-items: center;
 }
 #hero-section2
 {
-justify-self: center;
-    display:flex;
-justify-items: center;
+   justify-self: center;
+   display:flex;
+   justify-items: center;
    border: 1px solid black;
    justify-content: space-evenly;
    align-items:center;
+   margin: 25px;
+   margin-top: 0px;
+   margin-bottom: 15px;
    border-top: 0;
-   margin-bottom: 20px;
+   
 
 }
 
@@ -149,11 +166,17 @@ justify-items: center;
 { 
     display: flex;
     border: 1px solid black;
+
     text-align: center;
     justify-content: center;
-    margin: 5px;
+    width: auto;
+    margin-top: 10px;
+    margin: 25px;
+    margin-bottom: 0px;
+
     border-bottom: 0;
-    margin-top: 20px;
+    
+
 }
 #title h1
 {
@@ -174,8 +197,8 @@ img
     margin: 10px;
     justify-content: space-between;
     align-items: center;
-    height: 100px;
-    width: 200px;
+    height: 80px;
+    width: 160px;
 }
 #person1
 {
@@ -185,7 +208,9 @@ text-align: center;
 align-items: center;
 padding: space-evenly;
 }
-#person1 img{border: 1px solid green;
+#person1 img
+{
+    border: 1px solid green;
     margin-top: 2px;
 }
 #person1 p{border: 2px solid blue;
@@ -224,14 +249,20 @@ margin:10px;
     align-items: center;
     padding: space-evenly;
     }
-    #person3 img{border: 1px solid green;
+    #person3 img
+    {
+        border: 1px solid green;
     }
-    #person3 p{border: 2px solid blue;
+    #person3 p
+    {
+        border: 2px solid blue;
         padding: 35px;
         justify-content: space-around;
         margin:10px;
     }
-    #person3 h2{border: 1px solid purple;
+    #person3 h2
+    {
+        border: 1px solid purple;
         padding:35px;
         margin:10px;
         }
@@ -243,40 +274,53 @@ margin:10px;
     align-items: center;
     padding: space-evenly;
     }
-    #person4 img{border: 1px solid green;
+    #person4 img
+    {
+        border: 1px solid green;
     }
-    #person4 p{border: 2px solid blue;
+    #person4 p
+    {
+        border: 2px solid blue;
         padding: 35px;
         justify-content: space-around;
         margin:10px;
     }
-    #person4 h2{border: 1px solid purple;
+    #person4 h2
+    {
+        border: 1px solid purple;
         padding:35px;
         margin:10px;
         }
     #hero3
     {
-        display:flex;
         border: 1px solid black;
         height:fit-content;
         width:fit-content;
-        margin-left: 24%;
+        margin-left: 33%;
+        justify-content: center;
+        align-items: self-start;
+        margin-top: 30px;
+        align-content:space-between;
     }
+    
+
+
     #hero3 div
     {
-        
+      
       margin: 10px;
-      border: 1px solid black;
+      border: 1px solid orangered;
+      align-items: center;
+      
     }
-
-
-
+   
     #hero3 q
     {
         display:flex;
         border: 1px solid black;
         justify-content: center;
         padding:35px;
+        margin: 10px;
     }
     #hero3 p
         {
@@ -284,6 +328,7 @@ margin:10px;
             border: 1px solid black;
             justify-content: center;
             padding:35px;
+            margin: 10px;
         }
     
     #hero3 h2
@@ -292,26 +337,24 @@ margin:10px;
         border: 1px solid black;
         justify-content: center;
         padding:35px;
+        margin: 10px;
     }
     #hero3 img
-    {
-
-       margin-top: 0;
+{
         display:flex;
-        border: 2px solid green;
-        justify-content: center;
-        height: 100px;
-        width: 200px;
-        text-align:center;
-        justify-items: center;
-    }
+        border: 1px solid green;
+        margin:10px;
+}
    .title4 h1
    {
     display: flex;
-    border: 1px solid red ;
-    padding: 15px;
+    border: 1px solid blue ;
+    padding: 20px;
+    height: 20px;
     align-content: center;  
+    align-items: center;
     justify-content: center;
+    text-align: center;
     width:fit-content;
     
  }
@@ -319,41 +362,48 @@ margin:10px;
  {
     border: 1px solid black;
     width: inherit;
-    padding-left: 43%;
+    padding-left: 41%;
     justify-content: center;
-    
- }
+    border-bottom: 0px;
+    margin-bottom: 0%;
+    }
+
+
    
   #hero4
     {
         display: flex;
-        border: 1px solid blue;
-        padding: 15px;
+        border: 2px solid black;
         text-align: center;
-        justify-content: space-around;
+        justify-content: space-between;
         justify-items: center;
         align-items: center;
-        width: inherit;
-        margin-bottom: 0;
+        width: auto;
+        padding: 15px;
+        padding-top: 0px;
+        
     }
     #hero4 div
     {
      
-     justify-content: space-between;
+     justify-content: center;
      align-content: space-between;
-     justify-items: space-around;
+     justify-items: space-between;
      margin: 4px;
      border: 1px solid black;
      align-items: center;
-     margin: 4px;
-    }
+    text-align: center;
+
+}
     #picture
     {
         border: 1px solid green;
-       padding: 20px;
+       padding: 15px;
        height: 20px;
        justify-content: center;
        align-content:center;
+       justify-items: center;
+       width: auto;
     }
   
     #hero4 h1
@@ -401,14 +451,7 @@ margin:10px;
         justify-items: center;
     }
     
-    
-    main
-    {
-        justify-content:center;
-
-    }
-
-    #button 
+     #button 
 {
     margin: 0;
     margin-bottom: 4px;
@@ -435,20 +478,24 @@ margin:10px;
 #hero5
 {
     border: 1px solid black;
-    margin-bottom: 4px;
 }
+
+
+
 #title6
 {
-    border: 1px solid black;
+    border: 1px solid blue;
     display:flex;
-    width: 20%;
+    width: 18%;
     justify-content: center;
-    padding: 20px;
-    margin-left: 38%;
+    padding: 15px;
     align-content: center;
     align-items: center;
     justify-items: center;
-    margin-bottom: 4px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    margin-left: 40%;
+
 }
 #hero6 div
 {
@@ -483,6 +530,9 @@ margin: 4px;
 {
     border: 1px solid blue;
     justify-content: center;
+    align-items: center;
+    text-align: center;
+    justify-items: center;
     padding: 20px;
     margin: 4px;
 
@@ -495,6 +545,13 @@ margin: 4px;
     margin: 4px;
 }
 
+footer
+{
+border: 3px solid black;
+margin-bottom: 4px;
+border-bottom: 10%;
+}
+
 footer div
 {
     height: inherit;
@@ -504,7 +561,8 @@ footer div
     text-align: center;
     align-items: center;
     justify-items: center;
-    margin: 4px;
+    align-content: center;
+    margin: 10px;
 }
 
 
@@ -524,7 +582,23 @@ footer div
 border: 1px solid yellow;
 margin:4px;
 }
-
+#lastp p
+{
+    border: 1px solid green;
+display: flex;
+    padding: 20px;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    align-content: center;
+    text-align: center;
+    margin-left: 40%;
+}
+#lastp
+{
+    border: 0px;
+    
+}
 
 
  
