--- a/html advanced/css/style.css
+++ b/html advanced/css/style.css
@@ -149,7 +149,7 @@ justify-items: center;
    justify-self: center;
    display:flex;
    justify-items: center;
-   border: 1px solid black;
+   border: 2px solid black;
    justify-content: space-evenly;
    align-items:center;
    margin: 25px;
@@ -165,7 +165,7 @@ justify-items: center;
 #title
 { 
     display: flex;
-    border: 1px solid black;
+    border: 2px solid black;
 
     text-align: center;
     justify-content: center;
@@ -202,7 +202,7 @@ img
 }
 #person1
 {
-border: 2px solid black;
+border: 1px solid black;
 justify-content: space-evenly;
 text-align: center;
 align-items: center;
@@ -224,7 +224,7 @@ margin:10px;
 }
 #person2
 {
-    border: 2px solid black;
+    border: 1px solid black;
     justify-content: space-evenly;
     text-align: center;
     align-items: center;
@@ -243,7 +243,7 @@ margin:10px;
         }
 #person3
 {
-    border: 2px solid black;
+    border: 1px solid black;
     justify-content: space-evenly;
     text-align: center;
     align-items: center;
@@ -268,7 +268,7 @@ margin:10px;
         }
     #person4
 {
-    border: 2px solid black;
+    border: 1px solid black;
     justify-content: space-evenly;
     text-align: center;
     align-items: center;
@@ -293,14 +293,15 @@ margin:10px;
         }
     #hero3
     {
-        border: 1px solid black;
+        border: 2px solid black;
         height:fit-content;
         width:fit-content;
-        margin-left: 33%;
+        margin-left: 30%;
         justify-content: center;
         align-items: self-start;
         margin-top: 30px;
         align-content:space-between;
+        margin-bottom: 10px;
     }
     
 
@@ -309,7 +310,7 @@ margin:10px;
     {
       
       margin: 10px;
-      border: 1px solid orangered;
+      border: 1px solid black;
       align-items: center;
       
     }
@@ -349,23 +350,26 @@ margin:10px;
    {
     display: flex;
     border: 1px solid blue ;
-    padding: 20px;
+    padding: 15px;
     height: 20px;
     align-content: center;  
     align-items: center;
     justify-content: center;
     text-align: center;
     width:fit-content;
+    margin-bottom: 5px;
+    margin-top: 15px;
     
  }
  .title4
  {
-    border: 1px solid black;
-    width: inherit;
+    border: 2px solid black;
     padding-left: 41%;
     justify-content: center;
     border-bottom: 0px;
     margin-bottom: 0%;
+    margin: 4px;
+    margin-top: 10px;
     }
 
 
@@ -380,19 +384,23 @@ margin:10px;
         align-items: center;
         width: auto;
         padding: 15px;
-        padding-top: 0px;
+        border-top: 0px;
         
     }
+    
+    
+    
     #hero4 div
     {
-     
      justify-content: center;
-     align-content: space-between;
-     justify-items: space-between;
-     margin: 4px;
+     align-content: center;
+     justify-items: center;
+     align-items:center;
      border: 1px solid black;
      align-items: center;
     text-align: center;
+    margin: 5px;
+    width:auto;
 
 }
     #picture
@@ -404,6 +412,7 @@ margin:10px;
        align-content:center;
        justify-items: center;
        width: auto;
+       
     }
   
     #hero4 h1
@@ -533,7 +542,7 @@ margin: 4px;
     align-items: center;
     text-align: center;
     justify-items: center;
-    padding: 20px;
+    padding: 15px;
     margin: 4px;
 
 }    
@@ -556,7 +565,7 @@ footer div
 {
     height: inherit;
     display:flex;
-    border: 1px solid red;
+    border: 2px solid black;
     justify-content:space-between;
     text-align: center;
     align-items: center;
@@ -579,7 +588,7 @@ footer div
 }
 #nav-links2 a
 {
-border: 1px solid yellow;
+border: 1px solid green;
 margin:4px;
 }
 #lastp p
@@ -593,12 +602,13 @@ display: flex;
     align-content: center;
     text-align: center;
     margin-left: 40%;
+    height:fit-content;
 }
 #lastp
 {
     border: 0px;
-    
 }
+
 
 
  
