--- a/css basic/base.css
+++ b/css basic/base.css
@@ -69,9 +69,11 @@ article {
 	margin-left: 10px;
 }
 header {
-	border-bottom: 1px solid rgb(236, 14, 14);
+	border-bottom: 3px solid rgb(236, 14, 14);
+	padding: 10px;
 	transition: border-bottom-color 1s ease;
-	justify-content: space-evenly;
+	justify-content: space-between;
+	border-top: 10px;
 }
 header a {
 	color: rgba(0, 0, 0, 0.8);
@@ -129,7 +131,6 @@ header ul {
 	list-style: none;
 	margin: 0;
 	padding: 0;
-	margin-top: 10px;
 	justify-content:flex-start;
 }
 header li {
